{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 43,
  "lineage": "d240a0cf-55aa-7fc6-c5cf-ae80b46e4db9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d058fe428540cd89",
            "arn": "arn:aws:ec2:ap-southeast-1:237071198273:instance/i-00e4d0649f3e8e738",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e4d0649f3e8e738",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-connect-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008e66e52d4f51e74",
            "private_dns": "ip-172-16-100-42.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.100.42",
            "public_ip": "13.250.43.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04caa4bcdfcd87b83",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad012cd8773e19d8",
            "tags": {
              "Name": "web-devops-01"
            },
            "tags_all": {
              "Name": "web-devops-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036ef8a6f6fd0a986"
            ]
          },
          "dependencies": [
            "aws_key_pair.devops",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_vpc",
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:237071198273:internet-gateway/igw-061439093d223c3c5",
            "id": "igw-061439093d223c3c5",
            "owner_id": "237071198273",
            "tags": {
              "Name": "devops-11082022-subnet-igw"
            },
            "tags_all": {
              "Name": "devops-11082022-subnet-igw"
            },
            "vpc_id": "vpc-0c4c2fefdb5a7453f"
          },
          "dependencies": [
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-061439093d223c3c5",
            "id": "r-rtb-0540a01929dc52fa01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0540a01929dc52fa0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:237071198273:route-table/rtb-0540a01929dc52fa0",
            "id": "rtb-0540a01929dc52fa0",
            "owner_id": "237071198273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061439093d223c3c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-11082022-subnet-igw-routing"
            },
            "tags_all": {
              "Name": "devops-11082022-subnet-igw-routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4c2fefdb5a7453f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0099d8ae0f68c175c",
            "route_table_id": "rtb-0540a01929dc52fa0",
            "subnet_id": "subnet-0ad012cd8773e19d8"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_vpc",
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:237071198273:security-group/sg-036ef8a6f6fd0a986",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036ef8a6f6fd0a986",
            "ingress": [
              {
                "cidr_blocks": [
                  "35.247.128.96/32"
                ],
                "description": "SSH from specify IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "237071198273",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4c2fefdb5a7453f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:237071198273:subnet/subnet-0ad012cd8773e19d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad012cd8773e19d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "237071198273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-11082022-subnet"
            },
            "tags_all": {
              "Name": "devops-11082022-subnet"
            },
            "vpc_id": "vpc-0c4c2fefdb5a7453f"
          },
          "dependencies": [
            "aws_vpc.devpos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devpos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:237071198273:vpc/vpc-0c4c2fefdb5a7453f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d4d4a9ccdb53359d",
            "default_route_table_id": "rtb-0701a8a57c41784e6",
            "default_security_group_id": "sg-090d52f0b1d75bf14",
            "dhcp_options_id": "dopt-0dd7b6c8ec542bfce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c4c2fefdb5a7453f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0701a8a57c41784e6",
            "owner_id": "237071198273",
            "tags": {
              "name": "devops-11082022"
            },
            "tags_all": {
              "name": "devops-11082022"
            }
          }
        }
      ]
    }
  ]
}